sdk/include/reactos/libs/audiosrv/audiosrv.h
@@ -11,8 +11,8 @@
 #ifndef AUDIOSRV_H
 #define AUDIOSRV_H
 
-/* This is currently set to avoid conflicting service names in Windows! */
-#define SERVICE_NAME                L"RosAudioSrv"
+/* The service name */
+#define SERVICE_NAME                L"AudioSrv"
 
 /* A named mutex is used for synchronizing access to the device list.
    If this mutex doesn't exist, it means the audio service isn't running. */
